# HackAiKitVersion1

./: Dockerfile  README.md  config.ini.example  pyproject.toml  requirements.txt
examples/scripts/: test_module_manager.py
hackaikit/api/: app.py  main.py  schemas.py
hackaikit/api/endpoints/: __init__.py  llm_router.py
hackaikit/core/: base_module.py  config_manager.py  module_manager.py
hackaikit/integrations/: gemini_utils.py  huggingface_utils.py  openai_utils.py
hackaikit/modules/: __init__.py  computer_vision.py  deep_learning.py  llm_tools.py  llm_tools_module.py  nlp.py  reinforcement_learning.py  sensor_signal.py  supervised_learning.py  supervised_learning_module.py  time_series.py  tinyml.py  unsupervised_learning.py
